--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@ KERNEL_SOURCE_BRANCH=lineage-20
 KERNEL_DEFCONFIG=enchilada_defconfig
 TARGET_ARCH=arm64
 KERNEL_FILE=Image.gz-dtb
-CLANG_VERSION=r450784d
+CLANG_VERSION=r416183b
 EXTRA_BUILD_COMMAND:LD=ld.lld
 DISABLE-LTO=false
 USE_KERNELSU=true
